src/objects/Claim__c.object
<CustomObject>
    <description>Ability for employees to record and claim reimbursement from the company for official expenses incurred 
Has to capture following information</description>
    <fields>
        <fullName>Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approving_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expenses_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Date__c</fullName>
        <label>Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Description__c</fullName>
        <label>Claim Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Item_Count__c</fullName>
        <label>Claim Item Count</label>
        <summaryForeignKey>Claim_Items__c.Claim__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Claim_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expenses_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Claim</relationshipLabel>
        <relationshipName>Claim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitter_Comments__c</fullName>
        <label>Submitter Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount_to_Claim__c</fullName>
        <label>Total Amount to Claim</label>
        <summarizedField>Claim_Items__c.Amount_in_Claim_Currency__c</summarizedField>
        <summaryForeignKey>Claim_Items__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Claim_Amount__c</fullName>
        <label>Total Claim Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Claim_Date__c</columns>
        <columns>Approving_Manager__c</columns>
        <columns>Claim_Status__c</columns>
        <columns>Total_Claim_Amount__c</columns>
        <columns>Submitter_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Claims_Unapproved</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Claim_Date__c</columns>
        <columns>NAME</columns>
        <columns>Claim_Number__c</columns>
        <columns>Submitter_Comments__c</columns>
        <columns>Total_Amount_to_Claim__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Approving_Manager__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Claim_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Claim_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>This Month Claims - Unapproved</label>
    </listViews>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim</pluralLabel>
    <recordTypes>
        <fullName>Claim</fullName>
        <active>true</active>
        <label>Claim</label>
    </recordTypes>
    <recordTypes>
        <fullName>Claim_Unedit</fullName>
        <active>true</active>
        <label>Claim Unedit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validation_on_Approver_Manager</fullName>
        <active>true</active>
        <errorConditionFormula>Approving_Manager__c = OwnerId</errorConditionFormula>
        <errorDisplayField>Approving_Manager__c</errorDisplayField>
        <errorMessage>Client Owner cannot be Approver Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Submitters_Comment</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Claim_Status__c ,&quot;Submitted&quot;), ISBLANK( Submitter_Comments__c))</errorConditionFormula>
        <errorDisplayField>Submitter_Comments__c</errorDisplayField>
        <errorMessage>Submitter&apos;s Comment needs to be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_rule_to_Edit_Claim</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OwnerId!= $User.Id,ISPICKVAL(Claim_Status__c, &quot;Saved&quot;))</errorConditionFormula>
        <errorMessage>Claim Owner can only edit the Claim records</errorMessage>
    </validationRules>
</CustomObject>